# temp-static-lib-in-hs-lib

./: .gitignore  Makefile  test.cabal  test_user.c  thing.c
lib/: Lib.hs
src/: Main.hs
