cabal-version:       >=1.10
name:                test
synopsis:            Test
version:             0.0.1.0
license:             MIT
author:              Tom Smeding
build-type:          Simple

library test-lib
  exposed-modules:     Lib
  build-depends:       base >= 4.13 && < 4.17
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  extra-libraries:     thing
  extra-lib-dirs:      /home/tom/tmp/lib

executable hs-user
  main-is:             Main.hs
  build-depends:       base >= 4.13 && < 4.17, test-lib
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
